# my_iot_security

./: README.md
02_start/esp32/base64/: CMakeLists.txt
02_start/esp32/base64/main/: CMakeLists.txt  base64.c
02_start/esp32/bignum/: CMakeLists.txt  sdkconfig
02_start/esp32/bignum/main/: CMakeLists.txt  bignum.c
02_start/esp32/ciphersuite_list/: CMakeLists.txt
02_start/esp32/ciphersuite_list/main/: CMakeLists.txt  ciphersuite_list.c
02_start/esp32/random/: CMakeLists.txt
02_start/esp32/random/main/: CMakeLists.txt  random.c
02_start/linux/base64/: CMakeLists.txt  base64.c
02_start/linux/ciphersuite-list/: CMakeLists.txt  ciphersuite_list.c
04_hash/esp32/hash/: CMakeLists.txt
04_hash/linux/: CMakeLists.txt  generic_sum.c  hello.c
05_aes/aes/: CMakeLists.txt
05_aes/aes/main/: CMakeLists.txt  aes.c
06_mac/hmac/: CMakeLists.txt
06_mac/hmac/main/: CMakeLists.txt  hmac.c
07_rng/gen_random/: CMakeLists.txt
07_rng/gen_random/main/: CMakeLists.txt  gen_random.c
08_rsa/rsa/: CMakeLists.txt
08_rsa/rsa/main/: CMakeLists.txt  rsa.c
09_dh/dh/: CMakeLists.txt  sdkconfig  sdkconfig.old
09_dh/dh/main/: CMakeLists.txt  dh.c
10_ecdh/ecdh/: CMakeLists.txt  sdkconfig.old
10_ecdh/ecdh/main/: ecdh.c
11_dsa/ecdsa/: CMakeLists.txt
11_dsa/ecdsa/main/: CMakeLists.txt  ecdsa.c
11_dsa/rsa_sign/: CMakeLists.txt
11_dsa/rsa_sign/main/: CMakeLists.txt  rsa_sign.c
12_cert/cert/: CMakeLists.txt
12_cert/cert/main/: CMakeLists.txt  cert.c  certs.h
14_tls/tls/: CMakeLists.txt
14_tls/tls/main/: CMakeLists.txt  ca_cert.h  tls.c
(+15 files in other folders)
